Add main for project

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-react-lib",
   "version": "0.1.0",
+  "main": "src/App.js",
   "private": true,
   "dependencies": {
     "react": "^15.6.1",
