--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-react-lib",
   "version": "0.1.0",
-  "main": "src/App.js",
+  "main": "lib/App.js",
   "private": true,
   "dependencies": {
     "react": "^15.6.1",
@@ -9,11 +9,15 @@
   },
   "devDependencies": {
     "autoprefixer": "7.1.0",
+    "babel-cli": "^6.24.1",
     "babel-core": "6.24.1",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^3.0.0",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "6.23.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
@@ -48,7 +52,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "lib": "babel src/ --out-dir lib --copy-files"
   },
   "jest": {
     "collectCoverageFrom": [
